--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1518,6 +1518,7 @@ report_unconfirmed_repaired_data_mismatches: false
 # Having many tables and/or keyspaces negatively affects performance of many operations in the
 # cluster. When the number of tables/keyspaces in the cluster exceeds the following thresholds
 # a client warning will be sent back to the user when creating a table or keyspace.
+# As of cassandra 4.1, these properties are deprecated in favor of guardrails.keyspaces and guardrails.tables
 # table_count_warn_threshold: 150
 # keyspace_count_warn_threshold: 40
 
@@ -1581,6 +1582,11 @@ enable_drop_compact_storage: false
 # guardrails:
 # Whether guardrails are enabled or not. Guardrails are disabled by default.
 # enabled: false
+# Guardrail to warn or abort when creating more user keyspaces than threshold.
+# The two thresholds default to -1 to disable.
+#     keyspaces:
+#         warn_threshold: -1
+#         abort_threshold: -1
 # Guardrail to warn or abort when creating more user tables than threshold.
 # The two thresholds default to -1 to disable.
 #     tables:
