CASSANDRA-16763: Updated license check and gitignore
* Added documentation files to RAT exclude list:
    - doc/antora.yaml
    - doc/modules/*
* Added generated doc files to .gitignore:
    - doc/modules/cassandra/pages/configuration/cass_yaml_file.adoc
    - doc/modules/cassandra/pages/tools/nodetool/
    - doc/modules/cassandra/examples/TEXT/NODETOOL/

Patch by Anthony Grasso; reviewed by Michael Semb Wever for CASSANDRA-16763

--- a/.gitignore
+++ b/.gitignore
@@ -69,8 +69,9 @@ Thumbs.db
 .ant_targets
 
 # Generated files from the documentation
-doc/source/configuration/cassandra_config_file.rst
-doc/source/tools/nodetool
+doc/modules/cassandra/pages/configuration/cass_yaml_file.adoc
+doc/modules/cassandra/pages/tools/nodetool/
+doc/modules/cassandra/examples/TEXT/NODETOOL/
 
 # Python virtual environment
 venv/
