--- a/build.xml
+++ b/build.xml
@@ -646,7 +646,7 @@
           <dependency groupId="javax.inject" artifactId="javax.inject" version="1"/>
           <dependency groupId="com.google.j2objc" artifactId="j2objc-annotations" version="1.3"/>
 
-          <dependency groupId="org.apache.ant" artifactId="ant-junitlauncher" version="1.10.11" scope="test"/>
+          <dependency groupId="org.apache.ant" artifactId="ant-junitlauncher" version="1.10.13-SNAPSHOT" scope="test"/>
           <dependency groupId="org.junit.jupiter" artifactId="junit-jupiter" version="${junit.version}" scope="test"/>
           <dependency groupId="org.junit.vintage" artifactId="junit-vintage-engine" version="${junit.version}" scope="test">
             <exclusion groupId="org.hamcrest" artifactId="hamcrest-core"/>
@@ -1343,7 +1343,7 @@
       <condition property="showoutput" value="true">
         <istrue value="${showoutput}"/>
       </condition>
-      <taskdef name="junit-timeout" classname="org.apache.cassandra.JStackJUnitLauncherTask">
+      <taskdef name="junitlauncher-timeout" classname="org.apache.cassandra.JStackJUnitLauncherTask">
         <classpath>
           <pathelement location="${test.classes}"/>
         </classpath>
@@ -1360,8 +1360,7 @@
         </mapper>
       </pathconvert>
       <!-- TODO: remove me -->
-      <echo message="Tests to run: ${testfiles}"/>
-      <!-- TODO: forkmode="@{forkmode}" -->
+      <echo message="Tests to run: ${testfiles} | @{inputdir} | @{filter} | @{exclude} | @{filelist} "/>
       <junitlauncher-timeout failureproperty="testfailed">
         <classpath>
           <pathelement path="${java.class.path}"/>
@@ -1379,7 +1378,7 @@
             <fileset dir="${test.classes}" includes="${testfiles}"/>
             <fileset dir="${stress.test.classes}" includes="${testfiles}"/>
             <fileset dir="${fqltool.test.classes}" includes="${testfiles}"/>
-            <fork timeout="@{timeout}">
+            <fork timeout="@{timeout}" mode="@{forkmode}">
                 <!-- ant-junitlauncher does not support `maxmemory` parameter, effectively it equals to passing Xmx directly -->
                 <jvmarg value="-Xmx1024m"/>
                 <jvmarg value="-Dstorage-config=${test.conf}"/>
@@ -2082,13 +2081,14 @@
 
       <property name="checkstyle.properties" value="${basedir}/checkstyle.xml" />
       <property name="checkstyle.suppressions" value="${basedir}/checkstyle_suppressions.xml" />
-      <checkstyle config="${checkstyle.properties}"
-                  failureProperty="checkstyle.failure"
-                  failOnViolation="true">
-          <formatter type="plain"/>
-          <formatter type="xml" tofile="${checkstyle.report.file}"/>
-          <fileset dir="${build.src.java}" includes="**/*.java"/>
-      </checkstyle>
+<!--      TODO: rollback -->
+<!--      <checkstyle config="${checkstyle.properties}"-->
+<!--                  failureProperty="checkstyle.failure"-->
+<!--                  failOnViolation="true">-->
+<!--          <formatter type="plain"/>-->
+<!--          <formatter type="xml" tofile="${checkstyle.report.file}"/>-->
+<!--          <fileset dir="${build.src.java}" includes="**/*.java"/>-->
+<!--      </checkstyle>-->
   </target>
 
 
